--- a/functions/package.json
+++ b/functions/package.json
@@ -23,6 +23,8 @@
     "@types/google-spreadsheet": "^3.1.5",
     "axios": "^0.23.0",
     "cors": "^2.8.5",
+    "date-fns": "^2.26.0",
+    "date-fns-tz": "^1.1.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase-admin": "^9.8.0",
